--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,16 +1,18 @@
 {
 	"dependencies": {
+		"bcrypt": "^5.1.1",
+		"dotenv": "^16.3.1",
+		"express": "^4.18.2",
+		"firebase": "^10.7.1",
+		"firebase-tools": "^13.0.1",
+		"http": "0.0.1-security",
+		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.0.3",
 		"mysql": "^2.18.1",
-		"express": "^4.18.2",
-		"http": "0.0.1-security",
-		"socketio": "^1.0.0",
-		"jsonwebtoken": "^9.0.2",
-		"bcrypt": "^5.1.1",
 		"nodemon": "^3.0.2",
-		"dotenv": "^16.3.1"
-	}
-	,"scripts": {
+		"socketio": "^1.0.0"
+	},
+	"scripts": {
 		"start": "nodemon server.js"
 	}
 }
